# rotate

./: README.md
src/: rotate.cabal
src - Copy/: rotate.cabal
src - Copy/example/: LinearRotate.hs  LinearTest.hs  VectRotate.hs  VectTest.hs
src - Copy/src/: Rotate.hsig
src/example/: VectRotate.hs
