name:          rotate
category:      Language
version:       0
license:       BSD2
cabal-version: 2.0
author:        Fog
maintainer:    Fog
stability:     experimental
build-type:    Simple
synopsis:      eg of how to use backpack
description:   provides two backends providing vector rotation using quaternions 

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  signatures: Rotate
  exposed-modules: TestRotate
  build-depends: base

library example
  default-language: Haskell2010
  hs-source-dirs: example
  exposed-modules: LinearRotate, VectRotate
  build-depends: base, linear, vect

executable rotate-example
  default-language: Haskell2010
  main-is: example/Main.hs
  build-depends: base, rotate, example
  mixins: rotate (TestRotate as Linear.TestRotate) requires (Rotate as LinearRotate)
  mixins: rotate (TestRotate as Vect.TestRotate  ) requires (Rotate as VectRotate  )

 	